# sn-rpi2-copy

./: .Xauthority  .bash_history  .gitconfig  .xsession-errors  .xsession-errors.old  99-usb-serial.rules  FRHe.txt  FlowStatusMonitoring.py  OPCUASentinel.sh  OverallStatus.py  OverallStatus_cur.txt  config.txt_copy  csi  dead.letter  gcdc-b1100-reader  gcdc-b1100-reader-last-value.cc  gcdc-b1100-reader.cc  history_22.07.21.txt  lvcl measure.txt  lvl measure.txt  package_edinburgh_pi.txt  slack-term.json  slack.parameters  temp.txt
.config/: lxtask.conf  mimeapps.list  monitors.xml
.cups/: lpoptions
.ssh/: known_hosts
ADC_Monitoring/: ADS1x15_cur.txt  ADS1x15_log.txt  Adafruit_ADS1x15.py  Adafruit_I2C.py  CalibInput.csv  TempReadout.py  TempReadout_2.py  tempData.txt
ClientScripts/: ClientHistoryReadout.py  ClientManualReadout.py  ClientSubscription.py  FlowStatusAlert.py  PlotTemperature.py  Pressure.txt  TemperatureLogging.py  UsefulFunctionsClient.py  complete_data.txt  testHistoryReadout.py
Desktop/: GUI.desktop  GasSystemGUI.desktop  delete now.py  email_alert_settings.txt  fake_opcua.py  fake_opcua2.py  fake_opcua_client.py  fake_opcua_client.py.save  opcua_test.py
Downloads/: Draeger - Sem10 17.xls  Draeger - Sem9 17.xls  Mesures Elec - Sem9 17.xls  eduroam-chromeos-TUoE.onc  eduroam-linux-TUoE.py  tcp_opcua_connection_v_2_0_1.tar
FlowRateMonitoring/: FlowStatus.py  GetGAIN.py  GetGAIN.py~  LastKeyPress.py  PR4000B.py  PR4000B_2.py  RangeScale.py  (+9 more)
OPCUAtest/forGasFactory/Plugin_Shell/: CMakeLists.txt  README.txt  cta_slc_pluginsInterface.h  shell.cpp
(+11902 files in other folders)
